--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,15 @@
 }
 
 body {
-  background-color:#e6f7ff;
+  /* background-color:#e6f7ff; */
   color:#333333;
   font-family: Helvetica, sans-serif;
   font-size: 18px; 
-  padding: 5%;
+  padding: 13%;
 }
 
 img{
-    width: 60%;
+    width: 80%;
 }
 
 .column {
