--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,17 @@ body {
   color:#333333;
   /* font-family: Helvetica, sans-serif; */
   font-family: 'Roboto', sans-serif;
-  font-size: 18px; 
-  padding: 12%;
+  font-size: 18px;
 }
 
-.row{
+.content{
+    padding-left: 13%;
+    padding-right: 13%;
+    padding-top: 1%;
+    padding-bottom: 2%;
+}
+
+.row{ 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,11 +39,13 @@ body {
 .footer{
     text-align: center;
     color: grey;
+    padding-bottom: 4%;
 }
 
 h2{
     color: #0275DA;
 }
+
 
 .socials > a{
     opacity: 80%;
@@ -48,7 +56,8 @@ h2{
 
 .header{    
     text-align: center;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
+    padding-top: 5%;
 }
 
 .header > a{
@@ -58,5 +67,6 @@ h2{
 }
 
 .header > a:hover{
-    color: #626262;
+    color: #0275DA;
 }
+
