--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
 .content{
     padding-left: 13%;
     padding-right: 13%;
-    padding-top: 1%;
     padding-bottom: 2%;
 }
 
@@ -46,7 +45,6 @@ h2{
     color: #0275DA;
 }
 
-
 .socials > a{
     opacity: 80%;
 }
@@ -56,8 +54,8 @@ h2{
 
 .header{    
     text-align: center;
-    padding-bottom: 2%;
-    padding-top: 5%;
+    padding-bottom: 2px;
+    padding-top: 25px;
 }
 
 .header > a{
