--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 	font-size: 38px;
     }
 }
-@media screen and ( max-width: 800px) {
+@media screen and ( max-width: 800px) and ( min-width: 401px) {
     #first {
 	font-size: 40px;
     }
@@ -31,14 +31,14 @@ body {
 	font-size: 28px;
     }
 }
-@media screen and ( min-width: 370px) {
+/* @media screen and ( max-width: 400 px){ */
     #first {
 	font-size: 30px;
     }
     #second {
 	font-size: 20px;
     }
-}
+/* } */
 
 .content {
     padding-left: 13%;
