--- a/css/style.css
+++ b/css/style.css
@@ -205,9 +205,10 @@ b {
     text-align: center;
 }
 
-.column-left{ float: left; width: 33%; } 
-.column-right{ float: right; width: 33%; }
-.column-center{ display: inline-block; width: 33%; }
+.column-left{ float: left; width: 30%; } 
+.column-right{ float: right; width: 30%; }
+.column-center{ display: inline-block; width: 30%; }
+.container{ text-align: center}
 
 @media (max-width: 767px) {
 .column-left{ float: left; width: 100%; } 
